# plugin-pipe

./: .gitignore  README.md  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
nonebot_plugin_pipe/: __init__.py  config.py  database.py  filter.py  filter_.py  handle.py  params.py  parser.py
nonebot_plugin_pipe/migrations/: cd8eaee88c94_.py  da7013e19ec2_.py
nonebot_plugin_pipe/templates/: nodes.html
