[project]
name = "nonebot-plugin-pipe"
version = "0.1.0"
description = ""
authors = [{ name = "Jigsaw", email = "j1g5aw@foxmail.com" }]
dependencies = [
    "nonebot2<3.0.0,>=2.0.0rc2",
    "nonebot-adapter-onebot>=2.2.0",
    "nonebot-plugin-datastore>=0.6.0a2",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
pre-commit = ["pycln", "isort", "black", "nonemoji", "pre-commit"]
nonebot = ["fastapi>=0.88.0,!=0.89.0,<1.0.0", "uvicorn>=0.12.0,<0.21.0"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
exclude = ["__pypackages__", "nonebot_plugin_pipe/migrations"]

[tool.nonebot]
adapters = [{ name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }]
plugins = ["nonebot_plugin_pipe"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
